# arca-proxy

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
POC_databricks/: 00_catalog_setup.sql  01_sample_data.py  02_multi_agent_pipeline.py
arca/: ARCHITECTURE.md  PROJECT.md  cache.py  cache_replay.py  cli.py  config.py  embeddings.py  nli_verify.py  normalizer.py  observability.py  proxy.py  semantic_guard.py
arca/databricks/: 00_bootstrap.py  00_schema_setup.sql  02_verify.py  04_dashboard.py  __init__.py  bootstrap.py  bootstrap_impl.py  dashboard.py  dashboard_definition.README.md  dashboard_definition.json  plan_b.py  verify.py
arca/fallback/: __init__.py
benchmarks/: EVAL_METRICS.md  EVAL_NLI.md  RESULTS.md  benchmark.py  eval_metrics.py
demo/: demo.py
docs/: DIAGRAMS.md  ROADMAP.arca-stale.md
scripts/: demo_seed.py
tests/: conftest.py  test_bootstrap.py  test_cache.py  test_cache_guard_integration.py  test_cache_integration.py  test_cache_replay.py  test_cli.py  test_demo_seed.py  test_embeddings.py  test_eval_metrics.py  test_fallback.py  test_harness.py  test_normalizer.py  test_observability.py  test_proxy.py  test_proxy_stats.py  test_readme.py  test_regressions.py  test_threshold_eval.py
tests/data/: eval_pairs_v1.jsonl  eval_pairs_v2.jsonl  eval_pairs_v3_heldout.jsonl  eval_pairs_v4_heldout.jsonl
