[build-system]
requires = ["hatchling>=1.25,<2.0"]
build-backend = "hatchling.build"

[project]
name = "arca-proxy"
version = "0.1.0"
description = "Local semantic cache proxy for Claude Code, backed by Databricks."
readme = "README.md"
requires-python = "==3.11.*"
license = { text = "MIT" }
authors = [{ name = "Jedi Hernandez", email = "jericohd@gmail.com" }]
dependencies = [
  # --- Phase 0: Databricks bootstrap ---
  # databricks-vectorsearch: was >=0.57,<1.0 (latest 0.75); range is already correct
  "databricks-vectorsearch>=0.57,<1.0",
  # databricks-sdk: was 0.38.* — latest is 0.118.0; WorkspaceClient/secrets API stable across range
  "databricks-sdk>=0.38,<0.119",
  # databricks-sql-connector: was 3.7.* — keeping 3.7.x; 4.x is a major bump that needs
  # live-warehouse testing before we commit (access_token param, Arrow schema changes)
  "databricks-sql-connector==3.7.*",
  # mlflow-skinny: was >=3.10.1,<3.11 — ceiling was too tight; opened to <4.0
  "mlflow-skinny>=3.10.1,<4.0",
  "pydantic-settings==2.6.*",
  # --- Phase 1+: proxy runtime (installed now to avoid re-pip on phase transition) ---
  # fastapi: was 0.115.* — latest is 0.137.2; lifespan+StreamingResponse API stable
  "fastapi>=0.115,<0.138",
  # uvicorn: was 0.32.* — latest is 0.49.0; backward-compatible across range
  "uvicorn[standard]>=0.32,<0.50",
  # httpx: was 0.27.* — 0.28.1 available; our raw client.stream() usage is unaffected
  "httpx>=0.27,<0.29",
  # sentence-transformers: was 3.3.* — latest is 5.6.0 (two major versions);
  # encode() API is backward-compatible but VS index is committed to 384-dim MiniLM weights;
  # keeping 3.3.* until model is explicitly upgraded and index rebuilt
  "sentence-transformers==3.3.*",
  "typer[all]==0.15.*",
  "structlog>=24.0,<25.0",
  # NOTE: `torch` CPU wheel is installed out-of-band:
  #   pip install torch==2.4.* --index-url https://download.pytorch.org/whl/cpu
  # It is deliberately absent from this list so `pip install -e .` does NOT pull CUDA.
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.24,<0.25",
]

[project.scripts]
arca = "arca.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["arca"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-x -q"
markers = [
  "integration: tests that hit live Databricks (skipped if DATABRICKS_TOKEN unset)",
]
